--- a/.classpath
+++ b/.classpath
@@ -4,8 +4,6 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/Users/julienmalka/Downloads/sq.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Yaron/Downloads/sq.jar"/>
-	<classpathentry kind="lib" path="/Users/julienmalka/Desktop/XBlast/sq.jar"/>
+	<classpathentry kind="lib" path="sq.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
